@@ -60,12 +60,6 @@
             + or [Caml_state->young_trigger].
 */
 
-/* Asserts that a word is a valid header for a young object */
-#define CAMLassert_young_header(hd)                \
-  CAMLassert(Wosize_hd(hd) > 0 &&                  \
-             Wosize_hd(hd) <= Max_young_wosize &&  \
-             Color_hd(hd) == 0)
-
 struct generic_table CAML_TABLE_STRUCT(char);
 
 void caml_alloc_minor_tables ()
@@ -485,10 +479,11 @@ CAMLexport void caml_gc_dispatch (void)
   }
 }
 
-/* Called by [Alloc_small] when [Caml_state->young_ptr] reaches
+/* Called by young allocations when [Caml_state->young_ptr] reaches
    [Caml_state->young_limit]. We may have to either call memprof or
    the gc. */
-void caml_alloc_small_dispatch (intnat wosize, int flags)
+void caml_alloc_small_dispatch (intnat wosize, int flags,
+                                int nallocs, unsigned char* encoded_alloc_lens)
 {
   intnat whsize = Whsize_wosize (wosize);
 
@@ -532,7 +527,8 @@ void caml_alloc_small_dispatch (intnat wosize, int flags)
   /* Check if the allocated block has been sampled by memprof. */
   if(Caml_state->young_ptr < caml_memprof_young_trigger){
     if(flags & CAML_DO_TRACK) {
-      caml_memprof_track_young(wosize, flags & CAML_FROM_CAML);
+      caml_memprof_track_young(wosize, flags & CAML_FROM_CAML,
+                               nallocs, encoded_alloc_lens);
       /* Until the allocation actually takes place, the heap is in an invalid
          state (see comments in [caml_memprof_track_young]). Hence, very little
          heap operations are allowed before the actual allocation.
