@@ -1,0 +1,10 @@
+2: 0.42 false
+3: 0.42 false
+4: 0.42 true
+2: 0.01 false
+3: 0.01 false
+4: 0.01 true
+2: 0.83 false
+3: 0.83 false
+4: 0.83 true
+OK
