@@ -1,0 +1,1 @@
+Fatal error: exception File "exception_callback_minor.ml", line 15, characters 40-46: Assertion failed
