@@ -27,6 +27,9 @@ Working version
 - #9233: Restore the bytecode stack after an allocation.
   (Stephen Dolan, review by Gabriel Scherer and Jacques-Henri Jourdan)
 
+- #9230: Memprof support for native allocations.
+  (Jacques-Henri Jourdan and Stephen Dolan, review by Gabriel Scherer)
+
 ### Code generation and optimizations:
 
 - #8637, #8805: Record debug info for each allocation
